<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.greatmap.idefunction.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


        <Button
            android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"/>

        <Button
            android:id="@+id/btn_showToast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showToast"/>

        <Button
            android:id="@+id/btn_photograph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photograph"/>

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"/>

        <Button
            android:id="@+id/btn_upload_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_file"/>

        <Button
            android:id="@+id/btn_showPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_photo"/>

        <Button
            android:id="@+id/btn_open_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_web"/>

        <Button
            android:id="@+id/btn_send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_SMS"/>

        <Button
            android:id="@+id/btn_dial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dial"/>

        <Button
            android:id="@+id/btn_audio_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_record"/>

        <Button
            android:id="@+id/btn_media_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media_record"/>

        <Button
            android:id="@+id/btn_scan_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_two_dimension_code"/>

    </LinearLayout>
</ScrollView>